--- a/homework 2/index.html
+++ b/homework 2/index.html
@@ -1,185 +1,172 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<title></title>
-		<link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
-	</head>
-	<body>
-		<style type="text/css">
-			li{
-				list-style: none;
-				margin-bottom: 30px;
-			}
-			*{
-				margin: 0px;
-				padding: 0px;
-			}
-			.block{
-				width: 630px;
-				height: 700px;
-				border:2px solid black;
-				display: flex;
-				margin-left: 10px;
-				font-family: 'Mali', cursive;	
-			}
-			.heading{
-				margin-left: 120px;
-
-			}
-			.professional{
-				width: 630px;
-				height: 480px;
-				border:2px solid black;
-				display: flex;
-				margin-left: 10px;	
-				font-family: 'Mali', cursive;
-			}
-			.block1{
-				width: 150px;
-				margin-top: 20px;
-				margin-left: 10px;
-			}
-			.block2{
-				width: 450px;
-				margin-left: 50px;
-				margin-top: 20px;
-			}
-			.inp1{
-				margin-bottom: 29px;
-				border: 2px solid black;
-				width: 400px;
-			}
-
-			p{
-				width: 380px;
-				margin-left: 19px;
-				margin-bottom: 5px;
-				font-family: 'Mali', cursive;
-			}
-			.inp4{
-				margin-bottom: 35px;
-				width: 50px;
-			}
-			.chkbx{
-				margin-bottom: 5px;
-			}
-			.l1{
-				margin-bottom: 103px;
-			}
-			.l2{
-				margin-bottom: 80px;
-			}
-			.country{
-				margin-top: 35px;
-			}
-			.area{
-				height: 80px;
-				border: 2px solid black;
-				width: 400px;
-				margin-bottom: 15px;
-			}
-			button{
-				margin: 10px;
-				width: 80px;
-				height: 30px;
-			}
-			.but{
-				width: 250px;
-				height: 100px;
-				margin: 0 auto;
-			}
-			table{
-				margin: 0 auto;
-				margin-top: 50px;
-				margin-bottom: 50px;
-			}
-			td{
-				text-align: center;
-				font-size: 20px;
-				height: 30px;
-			}
-			th{
-				height: 60px;
-				font-size: 30px;
-			}
-			.number{
-				width: 90px;
-			}
-			.lastcell{
-				text-align: left;
-			}
-		</style>
+	<html>
+		<head>
+			<meta charset="utf-8">
+			<title>Homework 2</title>
+			<link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
+		</head>
+		<body>
+			<style type="text/css">
+				.heading{
+					font-family: 'Mali', cursive;
+					}
+				.block{
+					clear: both;
+					text-align: right;
+					font-family: 'Mali', cursive;	
+				}
+				.inp1{
+					border: 1px solid black;
+					margin-bottom: 30px;
+					width: 400px;
+					margin-left: 70px;
+				}
+				.inp2{
+					float: left;
+					margin-bottom: 20px;
+					clear: both;
+					margin-left: 195px;	
+				}
+				.inp3{
+					margin-bottom: 30px;
+					width: 400px;
+					margin-left: 70px;
+				}
+				.experience{
+					float: left;
+					margin-left: 105px;
+					margin-bottom: 20px;
+				}
+				.l1{
+					float: left;
+				}
+				.l2{
+					float: left;
+				}
+				fieldset{
+					float: left;
+					margin-right: 200px;
+				}
+				.area{
+					width: 396px;
+					height: 50px;
+					border: 1px solid black;
+					margin-bottom: 30px;
+					margin-left: 70px;	
+				}
+				p{
+					width: 380px;
+					height: 50px;
+					margin-left: 197px;
+				}
+				.but{
+					width: 250px;
+					height: 100px;
+					margin: 0 auto;
+				}
+				button{
+					margin-left: 40px;
+					margin-top: 200px;
+				}
+				table{
+					margin: 0 auto;
+					margin-top: 850px;
+					margin-bottom: 50px;
+				}
+				td{
+					text-align: center;
+					font-size: 20px;
+					height: 30px;
+				}
+				th{
+					height: 60px;
+					font-size: 30px;
+				}
+				.number{
+					width: 90px;
+				}	
+			</style>
 		<h1 class="heading">Profile edit page</h1>
-		<p class="info">Basic info</p>
-		<div class="block">
-			<div class="block1">
-				<ul>
-					<li>ID</li>
-					<li>First Name</li>
-					<li>Last Name</li>
-					<li>Password</li>
-					<li>Phone</li>
-					<li class="l1">Email</li>
-					<li>DOB</li>
-					<li>Blog url</li>
-					<li class="l2">About me</li>
-					<li>Profile picture</li>
-				</ul>
+		<fieldset>
+			<legend>Basic info</legend>
+			<div class="block">
+				<label class="l1">Id</label>
+				<input type="text" name="" class="inp1">
 			</div>
-			<div class="block2">
-				<input type="text" name="" class="inp1" >
+			<div class="block">
+				<label class="l1">First Name</label>
 				<input type="text" name="" class="inp1">
+			</div>
+			<div class="block">
+				<label class="l1">Last Name</label>
 				<input type="text" name="" class="inp1">
-				<input type="password" name="" class="inp1">
-				<input type="tel" name="" placeholder="380" class="inp1">
-				<input type="email" name="" placeholder="youremail.com" class="inp1">
-				<div class="inp3">
-					<input type="checkbox" name="" class="inp2">
-					<label>Keep my email adress private</label>
-				</div>
-				<p class="texts">We'll remove your publick profile email and use
-				1978331+username@users.noreply.localhost</p>
+			</div>
+			<div class="block">
+				<label class="l1">Password</label>
+				<input type="Password" name="" class="inp1">
+			</div>
+			<div class="block">
+				<label class="l1">Phone</label>
+				<input type="tel" name="" class="inp1">
+			</div>
+			<div class="block">
+				<label class="l1">Email</label>
+				<input type="email" name="" class="inp1">
+			</div>
+			<div class="block">
+				<input type="checkbox" name="" class="inp2">
+				<label class="l2">Keep my email adress private</label><br/>
+				<p>We'll remove your publick profile email and use
+					1978331+username@users.noreply.localhost</p>
+			</div>
+			<div class="block">
+				<label class="l1">DOB</label>
 				<input type="date" name="" class="inp1">
+			</div>
+			<div class="block">
+				<label class="l1">Blog url</label>
 				<input type="url" name="" class="inp1">
+			</div>
+			<div class="block">
+				<label class="l1">About me</label>
 				<textarea class="area"></textarea>
-				<input type="file" name="" >
 			</div>
-		</div>
-			<p class="info">Professional info</p>
-		<div class="professional">
-			<div class="block1">
-				<ul>
-					<li>Desire to study</li>
-					<li>Experience</li>
-					<li class="l1">Development Experience</li>
-					<li>Country</li>
-					<li>Skills</li>
-				</ul>
+			<div class="block">
+				<label class="l1">Profile picture</label>
+				<input type="file" name="" class="inp3">
 			</div>
-			<div class="block2">
-				<input type="range" name="" class="inp1" >
-				<input type="number" name="" class="inp4">
-				<div>
-					<div class="chkbx">
-						<input type="radio" name="">
-						<label>Learning to program</label>
-					</div>
-					<div class="chkbx">
-						<input type="radio" name="">
-						<label>Junior Developer</label>
-					</div>
-					<div class="chkbx">
-						<input type="radio" name="">
-						<label>Mid-Level Developer</label>
-					</div>
-					<div class="chkbx">
-						<input type="radio" name="">
-						<label>Senior Developer</label>
-					</div>
-					
+		</fieldset>
+		<fieldset>
+			<legend>Professional info</legend>
+			<div class="block">
+				<label class="l1">Desire to study</label>
+				<input type="range" name="" class="inp1">
+			</div>
+			<div class="block">
+				<label class="l1">Experience</label>
+				<input type="number" name="" class="experience">
+			</div>
+			<div class="block">
+				<label class="l1">Development Experience</label>
+				<div class="chkbx">
+					<input type="radio" name="" id="1" class="inp2">
+					<label class="l2">Learning to program</label>
 				</div>
-				<div class="country">
+				<div class="chkbx">
+					<input type="radio" name="" id="2" class="inp2">
+					<label class="l2">Junior Developer</label>
+				</div>
+				<div class="chkbx">
+					<input type="radio" name="" id="3" class="inp2">
+					<label class="l2">Mid-Level Developer</label>
+				</div>
+				<div class="chkbx">
+					<input type="radio" name="" id="4" class="inp2">
+					<label class="l2" for="4">Senior Developer</label>
+				</div>
+			</div>
+			<div class="block">
+				<label class="l1">Country</label>
 					<select class="inp1">
 						<option disabled>Choose your country</option>
 						<option value="Ukraine">Ukraine</option>
@@ -187,37 +174,44 @@
 						<option value="Thailand">Thailand</option>
 						<option value="Spain">Spain</option>
 					</select>
-				</div>
-				<div class="languages">
-					<div class="chkbx">
-						<input type="checkbox" name="">
-						<label>HTML</label>
-					</div>
-					<div class="chkbx">
-						<input type="checkbox" name="">
-						<label>CSS</label>
-					</div>
-					<div class="chkbx">
-						<input type="checkbox" name="">
-						<label>JavaScript</label>
-					</div>
-					<div class="chkbx">
-						<input type="checkbox" name="">
-						<label>R</label>
-					</div>
-					<div class="chkbx">
-						<input type="checkbox" name="">
-						<label>Scala</label>
-					</div>
-					<div class="chkbx">
-						<input type="checkbox" name="">
-						<label>Haskell</label>
-					</div>
-				</div>
-				<input type="hidden" name="">
 			</div>
+			<div class="block">
+				<label class="l1">Skills</label>
+				<div class="languages">
+						<div class="chkbx">
+							<input type="checkbox" name="" class="inp2">
+							<label class="l2">HTML</label>
+						</div>
+						<div class="chkbx">
+							<input type="checkbox" name="" class="inp2">
+							<label class="l2">CSS</label>
+						</div>
+						<div class="chkbx">
+							<input type="checkbox" name="" class="inp2">
+							<label class="l2">JavaScript</label>
+						</div>
+						<div class="chkbx">
+							<input type="checkbox" name="" class="inp2">
+							<label class="l2">R</label>
+						</div>
+						<div class="chkbx">
+							<input type="checkbox" name="" class="inp2">
+							<label class="l2">Scala</label>
+						</div>
+						<div class="chkbx">
+							<input type="checkbox" name="" class="inp2">
+							<label class="l2">Haskell</label>
+						</div>
+					</div>
+					</div>
+						<input type="hidden" name="" class="inp2">
+					</div>
+			</div>
+		</fieldset>
+		<div class="but">
+			<button type="reset" name="cancel">Cancel</button>
+			<button type="submit">Submit</button>
 		</div>
-		<div class="but"><button type="reset" name="cancel">Cancel</button><button type="submit">Submit</button></div>
 		<table border="2px" align="center" width="90%" cellspacing="0" >
 			<tr>
 				<th rowspan="2"></th>
