--- a/homework 2/index.html
+++ b/homework 2/index.html
@@ -92,78 +92,78 @@
 				<legend>Basic info</legend>
 				<div class="block">
 					<label class="l1">Id</label>
-					<input type="text" name="" class="inp1">
+					<input type="text" name="id" class="inp1">
 				</div>
 				<div class="block">
 					<label class="l1">First Name</label>
-					<input type="text" name="" class="inp1">
+					<input type="text" name="First Name" class="inp1">
 				</div>
 				<div class="block">
 					<label class="l1">Last Name</label>
-					<input type="text" name="" class="inp1">
+					<input type="text" name="Last Name" class="inp1">
 				</div>
 				<div class="block">
 					<label class="l1">Password</label>
-					<input type="Password" name="" class="inp1">
+					<input type="Password" name="Password" class="inp1">
 				</div>
 				<div class="block">
 					<label class="l1">Phone</label>
-					<input type="tel" name="" class="inp1">
+					<input type="tel" name="Phone" class="inp1">
 				</div>
 				<div class="block">
 					<label class="l1">Email</label>
-					<input type="email" name="" class="inp1">
+					<input type="email" name="Email" class="inp1">
 				</div>
 				<div class="block">
-					<input type="checkbox" name="" class="inp2">
+					<input type="checkbox" name="Keep my email adress private" class="inp2">
 					<label class="l2">Keep my email adress private</label><br/>
 					<p>We'll remove your publick profile email and use
 						1978331+username@users.noreply.localhost</p>
 				</div>
 				<div class="block">
 					<label class="l1">DOB</label>
-					<input type="date" name="" class="inp1">
+					<input type="date" name="DOB" class="inp1">
 				</div>
 				<div class="block">
 					<label class="l1">Blog url</label>
-					<input type="url" name="" class="inp1">
+					<input type="url" name="Blog" class="inp1">
 				</div>
 				<div class="block">
 					<label class="l1">About me</label>
-					<textarea class="area"></textarea>
+					<textarea class="area" name="About"></textarea>
 				</div>
 				<div class="block">
 					<label class="l1">Profile picture</label>
-					<input type="file" name="" class="inp3">
+					<input type="file" name="Profile" class="inp3">
 				</div>
 			</fieldset>
 			<fieldset>
 				<legend>Professional info</legend>
 				<div class="block">
 					<label class="l1">Desire to study</label>
-					<input type="range" name="" class="inp1">
+					<input type="range" name="Study" class="inp1">
 				</div>
 				<div class="block">
 					<label class="l1">Experience</label>
-					<input type="number" name="" class="experience">
+					<input type="number" name="Experience" class="experience">
 				</div>
 				<div class="block">
 					<label class="l1">Development Experience</label>
 					<div class="chkbx">
-						<input type="radio" name="" id="1" class="inp2">
-						<label class="l2" for="1">Learning to program</label>
+						<input type="radio" name="Learning" id="id1" class="inp2">
+						<label class="l2" for="id1">Learning to program</label>
 					</div>
 					<div class="chkbx">
-						<input type="radio" name="" id="2" class="inp2">
-						<label class="l2" for="2">Junior Developer</label>
+						<input type="radio" name="Junior" id="id2" class="inp2">
+						<label class="l2" for="id2">Junior Developer</label>
 					</div>
 					<div class="chkbx">
-						<input type="radio" name="" id="3" class="inp2">
-						<label class="l2" for="3">Mid-Level Developer</label>
+						<input type="radio" name="Mid-Level" id="id3" class="inp2">
+						<label class="l2" for="id3">Mid-Level Developer</label>
 					</div>
 					<div class="chkbx">
-						<input type="radio" name="" id="4" class="inp2">
-						<label class="l2" for="4">Senior Developer</label>
+						<input type="radio" name="Senior" id="id4" class="inp2">
+						<label class="l2" for="id4">Senior Developer</label>
 					</div>
 				</div>
 				<div class="block">
@@ -180,27 +180,27 @@
 					<label class="l1">Skills</label>
 					<div class="languages">
 							<div class="chkbx">
-								<input type="checkbox" name="" class="inp2">
+								<input type="checkbox" name="HTML" class="inp2">
 								<label class="l2">HTML</label>
 							</div>
 							<div class="chkbx">
-								<input type="checkbox" name="" class="inp2">
+								<input type="checkbox" name="CSS" class="inp2">
 								<label class="l2">CSS</label>
 							</div>
 							<div class="chkbx">
-								<input type="checkbox" name="" class="inp2">
+								<input type="checkbox" name="JavaScript" class="inp2">
 								<label class="l2">JavaScript</label>
 							</div>
 							<div class="chkbx">
-								<input type="checkbox" name="" class="inp2">
+								<input type="checkbox" name="R" class="inp2">
 								<label class="l2">R</label>
 							</div>
 							<div class="chkbx">
-								<input type="checkbox" name="" class="inp2">
+								<input type="checkbox" name="Scala" class="inp2">
 								<label class="l2">Scala</label>
 							</div>
 							<div class="chkbx">
-								<input type="checkbox" name="" class="inp2">
+								<input type="checkbox" name="Haskell" class="inp2">
 								<label class="l2">Haskell</label>
 							</div>
 						</div>
@@ -210,8 +210,8 @@
 				</div>
 			</fieldset>
 			<div class="but">
-				<button type="reset" name="cancel">Cancel</button>
-				<button type="submit">Submit</button>
+				<button type="reset" name="Cancel">Cancel</button>
+				<button type="submit" name="Submit">Submit</button>
 			</div>
 		</form>
 		<table border="2px" align="center" width="90%" cellspacing="0" >
