Update 2(small fixes)

--- a/homework 2/index.html
+++ b/homework 2/index.html
@@ -84,6 +84,9 @@
 				}
 				.number{
 					width: 90px;
+				}
+				.lastcell{
+					text-align: left;
 				}	
 			</style>
 		<h1 class="heading">Profile edit page</h1>
