--- a/homework 2/index.html
+++ b/homework 2/index.html
@@ -218,89 +218,95 @@
 			</div>
 		</form>
 		<table border="2px" align="center" width="90%" cellspacing="0" >
-			<tr>
-				<th rowspan="2"></th>
-				<th>I-A</th>
-				<th>I-Б</th>
-				<th colspan="2">I-B</th>
-				<th>I-I</th>
-				<th>II-A</th>
-				<th>II-Б</th>
-				<th colspan="2">II-B</th>
-				<th colspan="2">III-A</th>
-				<th colspan="2">III-B</th>
-				<th>III-I</th>
-				<th rowspan="2"></th>
-			</tr>
-			<tr>
-				<td colspan="2">Підгрупа I</td>
-				<td>Підгрупа I</td>
-				<td>Підгрупа II</td>
-				<td>Підгрупа II</td>
-				<td colspan="2">Підгрупа I</td>
-				<td>Підгрупа II</td>
-				<td>Підгрупа II</td>
-				<td>Підгрупа I</td>
-				<td>Підгрупа II</td>
-				<td>Підгрупа I</td>
-				<td>Підгрупа II</td>
-				<td>Підгрупа II</td>
-			</tr>
-			<tr>
-				<th class="number">1</th>
-				<td colspan="5">Фізичне виховання</td>
-				<td colspan="2">Вища математика для фізиків доцент Корнієнко С.В. ауд. 258</td>
-				<td colspan="2">Прикладна механіка та основи конструювання доц.Луценко Г.В. ауд. 279</td>
-				<td colspan="2">Ділова іноземна мова ст.викл. Зінченко А.В. ауд. 267</td>
-				<td colspan="3">Теорія ймовірностей та випадкові процеси доц. Ральченко С.А. ауд. 136</td>
-				<th class="number">1</th>
-			</tr>
-			<tr>
-				<th class="number">2</th>
-				<td colspan="2">Математичний аналіз доц. Лила Д.М. ауд. 241</td>
-				<td></td>
-				<td>Інженерна та комп'ютерна графіка ст.викл. Власенко В.М. ауд. 131</td>
-				<td>Дискретна математика доц. Атамась В.В. ауд. 282</td>
-				<td colspan="2">Педагогіка доц. Лещенко І.Т. ауд. 258</td>
-				<td>Іноземна мова викл. Зінченко А.В. ауд. 242</td>
-				<td></td>
-				<td colspan="2">Чисельні методи у фізиці доц. Сторожук Н.В. ауд.</td>
-				<td></td>
-				<td></td>
-				<td>Вища математика доц. Босовський М.В. ауд. 243</td>
-				<th class="number">2</th>
-			</tr>
-			<tr>
-				<th class="number">3</th>
-				<td colspan="2">Математичний аналіз доц. Лила Д.М. ауд. 241</td>
-				<td>Інженерна та комп'ютерна графіка ст.викл. Власенко В.М. ауд. 131</td>
-				<td></td>
-				<td>Дискретна математика доц. Атамась В.В. ауд. 282</td>
-				<td colspan="2">Педагогіка доц. Лещенко І.Т. ауд. 258</td>
-				<td></td>
-				<td>Іноземна мова викл. Зінченко А.В. ауд. 242</td>
-				<td colspan="2">Чисельні методи у фізиці доц. Сторожук Н.В. ауд.</td>
-				<td></td>
-				<td></td>
-				<td>Вища математика доц. Босовський М.В. ауд. 243</td>
-				<th class="number">3</th>
-			</tr>
-			<tr>
-				<th class="number">4</th>
-				<td colspan="2"></td>
-				<td colspan="2">Фізика ст.викл. Власенко В.М. ауд. 279</td>
-				<td></td>
-				<td colspan="2"></td>
-				<td colspan="2"></td>
-				<td colspan="2"></td>
-				<td></td>
-				<td></td>
-				<td>Вища математика доц. Босовський М.В. ауд. 243</td>
-				<th class="number">4</th>
-			</tr>
-			<tr>
-				<td class="lastcell" colspan="16">Заступник директора з навчально-методичної роботи, ст. викладач___________________В.М. Власенко</td>
-			</tr>
+			<thead>
+				<tr>
+					<th rowspan="2"></th>
+					<th>I-A</th>
+					<th>I-Б</th>
+					<th colspan="2">I-B</th>
+					<th>I-I</th>
+					<th>II-A</th>
+					<th>II-Б</th>
+					<th colspan="2">II-B</th>
+					<th colspan="2">III-A</th>
+					<th colspan="2">III-B</th>
+					<th>III-I</th>
+					<th rowspan="2"></th>
+				</tr>
+				<tr>
+					<td colspan="2">Підгрупа I</td>
+					<td>Підгрупа I</td>
+					<td>Підгрупа II</td>
+					<td>Підгрупа II</td>
+					<td colspan="2">Підгрупа I</td>
+					<td>Підгрупа II</td>
+					<td>Підгрупа II</td>
+					<td>Підгрупа I</td>
+					<td>Підгрупа II</td>
+					<td>Підгрупа I</td>
+					<td>Підгрупа II</td>
+					<td>Підгрупа II</td>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<th class="number">1</th>
+					<td colspan="5">Фізичне виховання</td>
+					<td colspan="2">Вища математика для фізиків доцент Корнієнко С.В. ауд. 258</td>
+					<td colspan="2">Прикладна механіка та основи конструювання доц.Луценко Г.В. ауд. 279</td>
+					<td colspan="2">Ділова іноземна мова ст.викл. Зінченко А.В. ауд. 267</td>
+					<td colspan="3">Теорія ймовірностей та випадкові процеси доц. Ральченко С.А. ауд. 136</td>
+					<th class="number">1</th>
+				</tr>
+				<tr>
+					<th class="number">2</th>
+					<td colspan="2">Математичний аналіз доц. Лила Д.М. ауд. 241</td>
+					<td></td>
+					<td>Інженерна та комп'ютерна графіка ст.викл. Власенко В.М. ауд. 131</td>
+					<td>Дискретна математика доц. Атамась В.В. ауд. 282</td>
+					<td colspan="2">Педагогіка доц. Лещенко І.Т. ауд. 258</td>
+					<td>Іноземна мова викл. Зінченко А.В. ауд. 242</td>
+					<td></td>
+					<td colspan="2">Чисельні методи у фізиці доц. Сторожук Н.В. ауд.</td>
+					<td></td>
+					<td></td>
+					<td>Вища математика доц. Босовський М.В. ауд. 243</td>
+					<th class="number">2</th>
+				</tr>
+				<tr>
+					<th class="number">3</th>
+					<td colspan="2">Математичний аналіз доц. Лила Д.М. ауд. 241</td>
+					<td>Інженерна та комп'ютерна графіка ст.викл. Власенко В.М. ауд. 131</td>
+					<td></td>
+					<td>Дискретна математика доц. Атамась В.В. ауд. 282</td>
+					<td colspan="2">Педагогіка доц. Лещенко І.Т. ауд. 258</td>
+					<td></td>
+					<td>Іноземна мова викл. Зінченко А.В. ауд. 242</td>
+					<td colspan="2">Чисельні методи у фізиці доц. Сторожук Н.В. ауд.</td>
+					<td></td>
+					<td></td>
+					<td>Вища математика доц. Босовський М.В. ауд. 243</td>
+					<th class="number">3</th>
+				</tr>
+				<tr>
+					<th class="number">4</th>
+					<td colspan="2"></td>
+					<td colspan="2">Фізика ст.викл. Власенко В.М. ауд. 279</td>
+					<td></td>
+					<td colspan="2"></td>
+					<td colspan="2"></td>
+					<td colspan="2"></td>
+					<td></td>
+					<td></td>
+					<td>Вища математика доц. Босовський М.В. ауд. 243</td>
+					<th class="number">4</th>
+				</tr>
+			</tbody>
+			<tfoot>
+				<tr>
+					<td class="lastcell" colspan="16">Заступник директора з навчально-методичної роботи, ст. викладач___________________В.М. Власенко</td>
+				</tr>
+			</tfoot>
 		</table>
 	</body>
 </html>
