--- a/homework3/Homework3.html
+++ b/homework3/Homework3.html
@@ -46,7 +46,33 @@
 		</select>
 	</header>
 	<div class="slider">
-		<img src="images/img1.jpg" width="100%" height="739px">
+		<img class="theatre" src="images/img1.jpg" width="100%" height="739px">
+		<div class="slider-button">
+			<button class="slider-arrow slider-arrow1">
+				<img src="icon/arrow-left.png">
+			</button>
+			<button class="ticket">
+				<img src="icon/ticket.png">
+			</button>
+			<button class="ticket">
+				<img src="icon/ticket.png">
+			</button>
+			<button class="ticket orange-ticket">
+				<img src="icon/orange-ticket.png" width="92px" height="93px">
+			</button>
+			<div class="but">
+				<img src="icon/ticket2.png" height="93px">
+			</div>
+			<button class="ticket">
+				<img src="icon/ticket.png">
+			</button>
+			<button class="ticket">
+				<img src="icon/ticket.png">
+			</button>
+			<button class="slider-arrow slider-arrow2">
+				<img src="icon/arrow-right.png">
+			</button>
+		</div>
 	</div>
 	<div class="wrapper">
 		<aside class="aside1">
