small fixes(width image)

--- a/homework3/Homework3.html
+++ b/homework3/Homework3.html
@@ -46,7 +46,7 @@
 		</select>
 	</header>
 	<div class="slider">
-		<img class="theatre" src="images/img1.jpg" width="100%" height="739px">
+		<img class="theatre" src="images/img1.jpg" height="739px">
 		<div class="slider-button">
 			<button class="slider-arrow slider-arrow1">
 				<img src="icon/arrow-left.png">
