added alt for jpg images

--- a/homework3/Homework3.html
+++ b/homework3/Homework3.html
@@ -46,7 +46,7 @@
 		</select>
 	</header>
 	<div class="slider">
-		<img class="theatre" src="images/img1.jpg" height="739px">
+		<img class="theatre" src="images/img1.jpg" alt="slider image" height="739px">
 		<div class="slider-button">
 			<button class="slider-arrow slider-arrow1">
 				<img src="icon/arrow-left.png">
@@ -98,7 +98,7 @@
 		<main>
 			<p class="paragraph">Новини</p>
 			<article class="art1">
-				<img src="images/img2.jpg" width="482px" height="232px">
+				<img src="images/img2.jpg" width="482px" height="232px" alt="news image">
 				<h3 class="heading3">Назва новини</h3>
 				<p class="paragraph1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
 				<hr color="#EDEDED"/>
@@ -108,7 +108,7 @@
 				</div>
 			</article>
 			<article class="art1">
-				<img src="images/img2.jpg" width="482px" height="232px">
+				<img src="images/img2.jpg" width="482px" height="232px" alt="news image">
 				<h3 class="heading3">Назва новини</h3>
 				<p class="paragraph1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
 				<hr color="#EDEDED"/>
@@ -118,7 +118,7 @@
 				</div>
 			</article>
 			<article class="art1">
-				<img src="images/img2.jpg" width="482px" height="232px">
+				<img src="images/img2.jpg" width="482px" height="232px" alt="news image">
 				<h3 class="heading3">Назва новини</h3>
 				<p class="paragraph1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
 				<hr color="#EDEDED"/>
@@ -128,7 +128,7 @@
 				</div>
 			</article>
 			<article class="art1">
-				<img src="images/img2.jpg" width="482px" height="232px">
+				<img src="images/img2.jpg" width="482px" height="232px" alt="news image">
 				<h3 class="heading3">Назва новини</h3>
 				<p class="paragraph1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
 				<hr color="#EDEDED"/>
@@ -141,12 +141,12 @@
 		<aside class="aside2">
 			<p class="paragraph3">Галерея</p>
 			<div class="aside2-1">
-				<img src="images/img3.jpg" width="235px" height="158">
+				<img src="images/img3.jpg" width="235px" height="158" alt="gallery image">
 				<p class="paragraph4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
 			</div>
 			<p class="paragraph3">Відео</p>
 			<div class="aside2-2">
-				<img src="images/img4.jpg" width="235px" height="158">
+				<img src="images/img4.jpg" width="235px" height="158" alt="image for video">
 				<p class="paragraph4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
 			</div>
 		</aside>
