--- a/homework3/Homework3.html
+++ b/homework3/Homework3.html
@@ -10,6 +10,7 @@
 <body>
 	<header class="header"> 
 		<h1 class="logo">
+			<a href="#"><img src="logo/logo.png" alt="logo"></a>
 		</h1>
 		<nav class="nav1">
 			<ul class="unordered1">
