add dot at review-h1 and fix width

--- a/homework4/Homework4.html
+++ b/homework4/Homework4.html
@@ -66,7 +66,7 @@
 	</section>
 	<section class="reviews">
 		<div class="reviews-block">
-			<h1 class="reviews-h1">What people say</h1>
+			<h1 class="reviews-h1">What people say<span class="dot">.</span></h1>
 			<div class="reviews-div">
 				<div class="review1 review1-1">
 					<p class="reviews-p1">Lorem ipsum dolor sit amet, onsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim </p>
