added alt at png

--- a/homework3/Homework3.html
+++ b/homework3/Homework3.html
@@ -10,7 +10,9 @@
 <body>
 	<header class="header"> 
 		<h1 class="logo">
-			<a href="#"><img src="logo/logo.png" alt="logo"></a>
+			<a href="#">
+				<img src="logo/logo.png" alt="logo">
+			</a>
 		</h1>
 		<nav class="nav1">
 			<ul class="unordered1">
@@ -187,19 +189,29 @@
 		</ul>
 		<ul class="unordered4">
 			<li class="list4">
-				<a  class="a4" href="#"><img class="social vk-3" src="social/vk-3.png"></a>
+				<a  class="a4" href="#">
+					<img class="social vk-3" src="social/vk-3.png" alt="vk">
+				</a>
 			</li>
 			<li class="list4">
-				<a  class="a4" href="#"><img class="social videos" src="social/videos.png"></a>
+				<a  class="a4" href="#">
+					<img class="social videos" src="social/videos.png" alt="youtube">
+				</a>
 			</li>
 			<li class="list4">
-				<a  class="a4" href="#"><img class="social google" src="social/google.png"></a>
+				<a  class="a4" href="#">
+					<img class="social google" src="social/google.png" alt="google+">
+				</a>
 			</li>
 			<li class="list4">
-				<a  class="a4" href="#"><img class="social facebook" src="social/facebook.png"></a>
+				<a  class="a4" href="#">
+					<img class="social facebook" src="social/facebook.png" alt="facebook">
+				</a>
 			</li>
 			<li class="list4">
-				<a  class="a4" href="#"><img class="social twitter" src="social/twitter.png"></a>
+				<a  class="a4" href="#">
+					<img class="social twitter" src="social/twitter.png" alt="twitter">
+				</a>
 			</li>
 			
 		</ul>
