added alt at tag img and added form

--- a/homework4/Homework4.html
+++ b/homework4/Homework4.html
@@ -12,7 +12,9 @@
 	<header class="header"> 
 		<div class="head">
 			<h1 class="logo">
-				<a href=""><img src="img/hey-u.png"></a>
+				<a href="">
+					<img src="img/hey-u.png" alt="logo">
+				</a>
 			</h1>
 			<nav class="header-nav">
 				<ul class="header-ul">
@@ -38,15 +40,15 @@
 				<button class="heyu-button"><p class="heyu-p2">Download now</p></button>
 			</div>
 			<div class="iPhone-7">
-				<img src="img/iphone.png">
+				<img src="img/iphone.png" alt="iphone">
 			</div>
 		</div>
 	</header>
 	<section class="messages">
 		<div class="messages-block">
 			<div class="messages-div">
-				<img  class="messages-img" src="img/messages.png" width="379px" height="613px">
-				<img  class="messages-img messages-img2" src="img/messages2.png" width="419px" height="653px">
+				<img  class="messages-img" src="img/messages.png" width="379px" height="613px" alt="messages">
+				<img  class="messages-img messages-img2" src="img/messages2.png" width="419px" height="653px" alt="messages Oswald Cobblepot">
 			</div>
 			<div class="easy-messaging">
 				<h1 class="messages-h1">Easy Messaging<span class="dot">.</span></h1>
@@ -55,8 +57,8 @@
 		</div>
 		<div class="messages-block2">
 			<div class="messages-div">
-				<img  class="messages-img messages-img3" src="img/messages3.png" width="379px" height="613px">
-				<img  class="messages-img messages-img4" src="img/messages4.png" width="300px" height="534px">
+				<img  class="messages-img messages-img3" src="img/messages3.png" width="379px" height="613px" alt="contacts">
+				<img  class="messages-img messages-img4" src="img/messages4.png" width="300px" height="534px" alt="groups">
 			</div>
 			<div class="keep-in-touch">
 				<h1 class="messages-h1">Keep in touch<span class="dot">.</span></h1>
@@ -134,9 +136,14 @@
 		<div class="subscribe-div">
 			<h1 class="subscribe-h1">Subscribe to our newsletter<span class="dot">.</span></h1>
 			<p class="subscribe-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-			<div class="subscribe-block">
-				<input class="subscribe-input" type="" name="" placeholder="Your email adress"><label><button class="subscribe-button">Subscribe</button></label>
-			</div>
+			<form class="subscribe-form" method="post" action="">
+				<div class="subscribe-block">
+					<input class="subscribe-input" type="" name="" placeholder="Your email adress">
+					<label>
+						<button class="subscribe-button">Subscribe</button>
+					</label>
+				</div>
+			</form>
 		</div>
 	</section>
 	<section class="download-app">
