--- a/homework3/Homework3.html
+++ b/homework3/Homework3.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<title>Theatre</title>
-	<link rel="stylesheet" type="text/css" href="main.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="reset.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<header class="header"> 
@@ -14,31 +14,31 @@
 				<img src="logo/logo.png" alt="logo">
 			</a>
 		</h1>
-		<nav class="nav1">
-			<ul class="unordered1">
-				<li class="list1">
-					<a  class="a1" href="#">Головна</a>
+		<nav class="header-nav">
+			<ul class="header-nav-ul">
+				<li class="header-nav-li">
+					<a  class="header-nav-a" href="#">Головна</a>
 				</li>
-				<li class="list1">
-					<a  class="a1" href="#">Афіша</a>
+				<li class="header-nav-li">
+					<a  class="header-nav-a" href="#">Афіша</a>
 				</li>
-				<li class="list1">
-					<a  class="a1" href="#">Репертуар</a>
+				<li class="header-nav-li">
+					<a  class="header-nav-a" href="#">Репертуар</a>
 				</li>
-				<li class="list1">
-					<a  class="a1" href="#">Новини</a>
+				<li class="header-nav-li">
+					<a  class="header-nav-a" href="#">Новини</a>
 				</li>
-				<li class="list1">
-					<a  class="a1" href="#">Про театр</a>
+				<li class="header-nav-li">
+					<a  class="header-nav-a" href="#">Про театр</a>
 				</li>
-				<li class="list1">
-					<a  class="a1" href="#">Персоналії</a>
+				<li class="header-nav-li">
+					<a  class="header-nav-a" href="#">Персоналії</a>
 				</li>
-				<li class="list1">
-					<a  class="a1" href="#">Контакти</a>
+				<li class="header-nav-li">
+					<a  class="header-nav-a" href="#">Контакти</a>
 				</li>
-				<li class="list1">
-					<a  class="a1" href="#">Фестивалі</a>
+				<li class="header-nav-li">
+					<a  class="header-nav-a" href="#">Фестивалі</a>
 				</li>
 			</ul>
 		</nav>
@@ -49,91 +49,86 @@
 		</select>
 	</header>
 	<div class="slider">
-		<img class="theatre" src="images/img1.jpg" alt="slider image" height="739px">
+		<div class="theatre"></div>
 		<div class="slider-button">
-			<button class="slider-arrow slider-arrow1">
-				<img src="icon/arrow-left.png">
+			<button class="slider-arrow">
+				<div class="slider-arrow1"></div>
 			</button>
 			<button class="ticket">
-				<img src="icon/ticket.png">
 			</button>
 			<button class="ticket">
-				<img src="icon/ticket.png">
 			</button>
 			<button class="ticket orange-ticket">
-				<img src="icon/orange-ticket.png" width="92px" height="93px">
 			</button>
-			<div class="but">
+			<div class="div-button">
 				<img src="icon/ticket2.png" height="93px">
 			</div>
 			<button class="ticket">
-				<img src="icon/ticket.png">
 			</button>
 			<button class="ticket">
-				<img src="icon/ticket.png">
 			</button>
-			<button class="slider-arrow slider-arrow2">
-				<img src="icon/arrow-right.png">
+			<button class="slider-arrow">
+				<div class="slider-arrow2"></div>
 			</button>
 		</div>
 	</div>
 	<div class="wrapper">
-		<aside class="aside1">
-				<ul class="unordered2">
-					<li class="list2">
-						<a  class="a2" href="#">Фотоархів</a>
+		<aside class="wrapper-aside">
+				<ul class="wrapper-aside-ul">
+					<li class="wrapper-aside-li wrapper-aside-li-1">
+						<a  class="wrapper-aside-li-a" href="#">Фотоархів</a>
 					</li>
-					<li class="list2">
-						<a  class="a2" href="#">Відеоархів</a>
+					<li class="wrapper-aside-li wrapper-aside-li-2">
+						<a  class="wrapper-aside-li-a" href="#">Відеоархів</a>
 					</li>
-					<li class="list2">
-						<a  class="a2" href="#">Піклувальна рада</a>
+					<li class="wrapper-aside-li wrapper-aside-li-3">
+						<a  class="wrapper-aside-li-a" href="#">Піклувальна рада</a>
 					</li>
-					<li class="list2">
-						<a  class="a2" href="#">Партненри</a>
+					<li class="wrapper-aside-li wrapper-aside-li-4">
+						<a  class="wrapper-aside-li-a" href="#">Партненри</a>
 					</li>
-					<li class="list2">
-						<a  class="a2" href="#">Форум</a>
+					<li class="wrapper-aside-li wrapper-aside-li-5">
+						<a  class="wrapper-aside-li-a" href="#">Форум</a>
 					</li>
 				</ul>
 			</nav>
 		</aside>
 		<main>
-			<p class="paragraph">Новини</p>
-			<article class="art1">
+			<p class="main-p">Новини</p>
+			<article class="main-article">
 				<img src="images/img2.jpg" width="482px" height="232px" alt="news image">
-				<h3 class="heading3">Назва новини</h3>
-				<p class="paragraph1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
+				<h3 class="article-h3">Назва новини</h3>
+				<p class="article-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
 				<hr color="#EDEDED"/>
 				<div class="date-info">
 					<p class="date">12.02.15</p>
 					<p class="view">112</p>
 				</div>
 			</article>
-			<article class="art1">
+			<article class="main-article">
 				<img src="images/img2.jpg" width="482px" height="232px" alt="news image">
-				<h3 class="heading3">Назва новини</h3>
-				<p class="paragraph1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
+				<h3 class="article-h3">Назва новини</h3>
+				<p class="article-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
 				<hr color="#EDEDED"/>
 				<div class="date-info">
 					<p class="date">12.02.15</p>
 					<p class="view">112</p>
 				</div>
 			</article>
-			<article class="art1">
+			<article class="main-article">
 				<img src="images/img2.jpg" width="482px" height="232px" alt="news image">
-				<h3 class="heading3">Назва новини</h3>
-				<p class="paragraph1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
+				<h3 class="article-h3">Назва новини</h3>
+				<p class="article-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
 				<hr color="#EDEDED"/>
 				<div class="date-info">
 					<p class="date">12.02.15</p>
 					<p class="view">112</p>
 				</div>
 			</article>
-			<article class="art1">
+			<article class="main-article">
 				<img src="images/img2.jpg" width="482px" height="232px" alt="news image">
-				<h3 class="heading3">Назва новини</h3>
-				<p class="paragraph1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
+				<h3 class="article-h3">Назва новини</h3>
+				<p class="article-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </p>
 				<hr color="#EDEDED"/>
 				<div class="date-info">
 					<p class="date">12.02.15</p>
@@ -141,14 +136,14 @@
 				</div>
 			</article>
 		</main>
-		<aside class="aside2">
-			<p class="paragraph3">Галерея</p>
-			<div class="aside2-1">
+		<aside class="aside">
+			<p class="aside-p">Галерея</p>
+			<div class="aside-div-first">
 				<img src="images/img3.jpg" width="235px" height="158" alt="gallery image">
 				<p class="paragraph4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
 			</div>
-			<p class="paragraph3">Відео</p>
-			<div class="aside2-2">
+			<p class="aside-p">Відео</p>
+			<div class="aside-div-second">
 				<img src="images/img4.jpg" width="235px" height="158" alt="image for video">
 				<p class="paragraph4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
 			</div>
@@ -158,64 +153,62 @@
 		<img src="icon/arrow.png">
 	</button>
 	<footer class="footer">
-		<ul class="unordered3">
-			<li class="list3">
-				<a  class="a3" href="#">Головна</a>
+		<ul class="footer-ul-first">
+			<li class="footer-li-first">
+				<a  class="footer-li-a-first" href="#">Головна</a>
 			</li>
-			<li class="list3">
-				<a  class="a3" href="#">Афіша</a>
+			<li class="footer-li-first">
+				<a  class="footer-li-a-first" href="#">Афіша</a>
 			</li>
-			<li class="list3">
-				<a  class="a3" href="#">Репертуар</a>
+			<li class="footer-li-first">
+				<a  class="footer-li-a-first" href="#">Репертуар</a>
 			</li>
-			<li class="list3">
-				<a  class="a3" href="#">Новини</a>
+			<li class="footer-li-first">
+				<a  class="footer-li-a-first" href="#">Новини</a>
 			</li>
-			<li class="list3">
-				<a  class="a3" href="#">Про театр</a>
+			<li class="footer-li-first">
+				<a  class="footer-li-a-first" href="#">Про театр</a>
 			</li>
-			<li class="list3">
-				<a  class="a3" href="#">Персоналії</a>
+			<li class="footer-li-first">
+				<a  class="footer-li-a-first" href="#">Персоналії</a>
 			</li>
-			<li class="list3">
-				<a  class="a3" href="#">Контакти</a>
+			<li class="footer-li-first">
+				<a  class="footer-li-a-first" href="#">Контакти</a>
 			</li>
-			<li class="list3">
-				<a  class="a3" href="#">Фестивалі</a>
+			<li class="footer-li-first">
+				<a  class="footer-li-a-first" href="#">Фестивалі</a>
 			</li>
-			<li class="list3">
-				<a  class="a3" href="#">Форум</a>
+			<li class="footer-li-first">
+				<a  class="footer-li-a-first" href="#">Форум</a>
 			</li>
 		</ul>
-		<ul class="unordered4">
-			<li class="list4">
-				<a  class="a4" href="#">
+		<ul class="footer-ul-second">
+			<li class="footer-li-second">
+				<a  class="footer-li-a-second" href="#">
 					<img class="social vk-3" src="social/vk-3.png" alt="vk">
 				</a>
 			</li>
-			<li class="list4">
-				<a  class="a4" href="#">
+			<li class="footer-li-second">
+				<a  class="footer-li-a-second" href="#">
 					<img class="social videos" src="social/videos.png" alt="youtube">
 				</a>
 			</li>
-			<li class="list4">
-				<a  class="a4" href="#">
+			<li class="footer-li-second">
+				<a  class="footer-li-a-second" href="#">
 					<img class="social google" src="social/google.png" alt="google+">
 				</a>
 			</li>
-			<li class="list4">
-				<a  class="a4" href="#">
+			<li class="footer-li-second">
+				<a  class="footer-li-a-second" href="#">
 					<img class="social facebook" src="social/facebook.png" alt="facebook">
 				</a>
 			</li>
-			<li class="list4">
-				<a  class="a4" href="#">
+			<li class="footer-li-second">
+				<a  class="footer-li-a-second" href="#">
 					<img class="social twitter" src="social/twitter.png" alt="twitter">
 				</a>
-			</li>
-			
+			</li>	
 		</ul>
-
 	</footer>
 </body>
 </html>
