--- a/homework3/Homework3.html
+++ b/homework3/Homework3.html
@@ -11,7 +11,7 @@
 	<header class="header"> 
 		<h1 class="logo">
 			<a href="#">
-				<img src="logo/logo.png" alt="logo">
+				<img src="logo/logo.png" alt="logo"> Театр імені Т.Г. Шевченка
 			</a>
 		</h1>
 		<nav class="header-nav">
