--- a/homework5/Homework5.html
+++ b/homework5/Homework5.html
@@ -31,5 +31,15 @@
 			</div>
 		</div>
 	</section>
+	<section class="download">
+		<div class="download_block block">
+			<div class="download-div">
+			<img class="your-app" src="img/your-app.png" width="219px" height="219px">
+			<h1 class="download-the-app">Download the app<span class="dot">.</span></h1>
+			<p class="download-app-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
+			<img  class="app-store" src="img/app-store.png" width="183px" height="60px">
+		</div>
+	</div>
+	</section>
 </body>
 </html>
