--- a/homework4/Homework4.html
+++ b/homework4/Homework4.html
@@ -45,7 +45,7 @@
 		</div>
 	</header>
 	<section class="messages">
-		<div class="messages-block">
+		<div class="messages_block block">
 			<div class="messages-div">
 				<img  class="messages-img" src="img/messages.png" width="379px" height="613px" alt="messages">
 				<img  class="messages-img messages-img2" src="img/messages2.png" width="419px" height="653px" alt="messages Oswald Cobblepot">
@@ -55,7 +55,7 @@
 				<p class="messages-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 		</div>
-		<div class="messages-block2">
+		<div class="messages_block2 block">
 			<div class="messages-div">
 				<img  class="messages-img messages-img3" src="img/messages3.png" width="379px" height="613px" alt="contacts">
 				<img  class="messages-img messages-img4" src="img/messages4.png" width="300px" height="534px" alt="groups">
@@ -146,12 +146,14 @@
 			</form>
 		</div>
 	</section>
-	<section class="download-app">
-		<div class="download-div">
-			<img class="your-app" src="img/your-app.png" width="219px" height="219px">
-			<h1 class="download-the-app">Download the app<span class="dot">.</span></h1>
-			<p class="download-app-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
-			<img  class="app-store" src="img/app-store.png" width="183px" height="60px">
+	<section class="download">
+		<div class="download_block block">
+			<div class="download-div">
+				<img class="your-app" src="img/your-app.png" width="219px" height="219px">
+				<h1 class="download-the-app">Download the app<span class="dot">.</span></h1>
+				<p class="download-app-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
+				<img  class="app-store" src="img/app-store.png" width="183px" height="60px">
+			</div>
 		</div>
 	</section>
 	<footer class="footer"> 
