added new section

--- a/homework5/Homework5.html
+++ b/homework5/Homework5.html
@@ -31,6 +31,20 @@
 			</div>
 		</div>
 	</section>
+	<section class="subscribe">
+		<div class="subscribe-div block">
+			<h1 class="subscribe-h1">Subscribe to our newsletter<span class="dot">.</span></h1>
+			<p class="subscribe-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+			<form class="subscribe-form" method="post" action="">
+				<div class="subscribe-block">
+					<input class="subscribe-input" type="" name="" placeholder="Your email adress">
+					<label>
+						<button class="subscribe-button">Subscribe</button>
+					</label>
+				</div>
+			</form>
+		</div>
+	</section>
 	<section class="download">
 		<div class="download_block block">
 			<div class="download-div">
