--- a/homework5/Homework5.html
+++ b/homework5/Homework5.html
@@ -10,35 +10,35 @@
 </head>
 <body>
 	<section class="messages">
-		<div class="messages_block block">
+		<div class="messages_block block messages_block_responsive">
 			<div class="messages-div">
 				<img  class="messages-img" src="img/messages.png" width="379px" height="613px" alt="messages">
 				<img  class="messages-img messages-img2" src="img/messages2.png" width="419px" height="653px" alt="messages Oswald Cobblepot">
 			</div>
 			<div class="easy-messaging">
-				<h1 class="messages-h1">Easy Messaging<span class="dot">.</span></h1>
-				<p class="messages-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<h1 class="messages-h1 responsive">Easy Messaging<span class="dot">.</span></h1>
+				<p class="messages-p responsive">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 		</div>
 		<div class="messages_block2 block">
 			<div class="messages-div">
-				<img  class="messages-img messages-img3" src="img/messages3.png" width="379px" height="613px" alt="contacts">
+				<img  class="messages-img messages-img3 " src="img/messages3.png" width="379px" height="613px" alt="contacts">
 				<img  class="messages-img messages-img4" src="img/messages4.png" width="300px" height="534px" alt="groups">
 			</div>
 			<div class="keep-in-touch">
-				<h1 class="messages-h1">Keep in touch<span class="dot">.</span></h1>
-				<p class="messages-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<h1 class="messages-h1 responsive">Keep in touch<span class="dot">.</span></h1>
+				<p class="messages-p responsive">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 		</div>
 	</section>
 	<section class="subscribe">
 		<div class="subscribe-div block">
-			<h1 class="subscribe-h1">Subscribe to our newsletter<span class="dot">.</span></h1>
-			<p class="subscribe-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+			<h1 class="subscribe-h1 responsive">Subscribe to our newsletter<span class="dot">.</span></h1>
+			<p class="subscribe-p responsive">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
 			<form class="subscribe-form" method="post" action="">
 				<div class="subscribe-block">
 					<input class="subscribe-input" type="" name="" placeholder="Your email adress">
-					<label>
+					<label class="label">
 						<button class="subscribe-button">Subscribe</button>
 					</label>
 				</div>
@@ -48,12 +48,12 @@
 	<section class="download">
 		<div class="download_block block">
 			<div class="download-div">
-			<img class="your-app" src="img/your-app.png" width="219px" height="219px">
-			<h1 class="download-the-app">Download the app<span class="dot">.</span></h1>
-			<p class="download-app-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
-			<img  class="app-store" src="img/app-store.png" width="183px" height="60px">
+				<img class="your-app" src="img/your-app.png" width="219px" height="219px">
+				<h1 class="download-the-app">Download the app<span class="dot">.</span></h1>
+				<p class="download-app-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et</p>
+				<img  class="app-store" src="img/app-store.png" width="183px" height="60px">
+			</div>
 		</div>
-	</div>
 	</section>
 </body>
 </html>
