--- a/homework5/Homework5.html
+++ b/homework5/Homework5.html
@@ -9,6 +9,34 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+	<header class="header">
+		<div class="head">
+			<div class="logo">
+	       		<a href="#">
+	         		<img src="img/hey-u.png" height="45" width="121" alt="HeyU logo"/>
+	      		 </a>
+	      	</div>
+			<nav>
+				<div class="topnav responsive">
+					<a class="topnav-a" href="">About</a>
+					<a class="topnav-a" href="">Faq</a>
+					<a class="topnav-a" href="">Support</a>
+					<a class="topnav-a" href="">Blog</a>
+					<a href="" class="icon">&#9776;</a>
+				</div>
+			</nav>
+		</div>
+		<div class="heyu">
+			<div class="heyu-div">
+				<h1 class="heyu-h1">Simple, safe & beautiful.</h1>
+				<p class="heyu-p1">With <span class="hey">HeyU</span>, you'll get fast, simple, secure messaging!</p>
+				<button class="heyu-button"><p class="heyu-p2">Download now</p></button>
+			</div>
+			<div class="iPhone-7">
+				<img src="img/iphone.png" alt="iphone" class="iphone">
+			</div>
+		</div>
+	</header>
 	<section class="messages">
 		<div class="messages_block block messages_block_responsive">
 			<div class="messages-div">
