fix width and structure

--- a/homework4/Homework4.html
+++ b/homework4/Homework4.html
@@ -9,28 +9,21 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-	<header class="header"> 
+	<header class="header">
 		<div class="head">
-			<h1 class="logo">
-				<a href="">
-					<img src="img/hey-u.png" alt="logo">
-				</a>
-			</h1>
-			<nav class="header-nav">
-				<ul class="header-ul">
-					<li class="heade-list">
-						<a  class="header-a about" href="#">About</a>
-					</li>
-					<li class="heade-list">
-						<a  class="header-a" href="#">Faq</a>
-					</li>
-					<li class="heade-list">
-						<a  class="header-a" href="#">Support</a>
-					</li>
-					<li class="heade-list">
-						<a  class="header-a" href="#">Blog</a>
-					</li>
-				</ul>
+			<div class="logo">
+	       		<a href="#">
+	         		<img src="img/hey-u.png" height="45" width="121" alt="HeyU logo"/>
+	      		 </a>
+	      	</div>
+			<nav>
+				<div class="topnav responsive">
+					<a class="topnav-a" href="">About</a>
+					<a class="topnav-a" href="">Faq</a>
+					<a class="topnav-a" href="">Support</a>
+					<a class="topnav-a" href="">Blog</a>
+					<a href="" class="icon">&#9776;</a>
+				</div>
 			</nav>
 		</div>
 		<div class="heyu">
@@ -40,29 +33,29 @@
 				<button class="heyu-button"><p class="heyu-p2">Download now</p></button>
 			</div>
 			<div class="iPhone-7">
-				<img src="img/iphone.png" alt="iphone">
+				<img src="img/iphone.png" alt="iphone" class="iphone">
 			</div>
 		</div>
 	</header>
 	<section class="messages">
-		<div class="messages_block block">
+		<div class="messages_block block messages_block_responsive">
 			<div class="messages-div">
 				<img  class="messages-img" src="img/messages.png" width="379px" height="613px" alt="messages">
 				<img  class="messages-img messages-img2" src="img/messages2.png" width="419px" height="653px" alt="messages Oswald Cobblepot">
 			</div>
 			<div class="easy-messaging">
-				<h1 class="messages-h1">Easy Messaging<span class="dot">.</span></h1>
-				<p class="messages-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<h1 class="messages-h1 responsive">Easy Messaging<span class="dot">.</span></h1>
+				<p class="messages-p responsive">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 		</div>
 		<div class="messages_block2 block">
 			<div class="messages-div">
-				<img  class="messages-img messages-img3" src="img/messages3.png" width="379px" height="613px" alt="contacts">
+				<img  class="messages-img messages-img3 " src="img/messages3.png" width="379px" height="613px" alt="contacts">
 				<img  class="messages-img messages-img4" src="img/messages4.png" width="300px" height="534px" alt="groups">
 			</div>
 			<div class="keep-in-touch">
-				<h1 class="messages-h1">Keep in touch<span class="dot">.</span></h1>
-				<p class="messages-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+				<h1 class="messages-h1 responsive">Keep in touch<span class="dot">.</span></h1>
+				<p class="messages-p responsive">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 		</div>
 	</section>
@@ -75,11 +68,19 @@
 					<p class="reviews-p2">Booking.com</p>
 					<div class="arrow-div">
 					</div>
+					<div class="people-div">
+						<img  class="people-img" src="img/men1.png" width="62px" height="62px">
+						<p  class="people-p">John Doe <span class="ceo">ceo</span></p>
+					</div>
 				</div>
 				<div class="review1 review1-2">
 					<p class="reviews-p1">Lorem ipsum dolor sit amet, onsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim </p>
 					<p class="reviews-p2">Airnbnb</p>
 					<div class="arrow-div">
+					</div>
+					<div class="people-div people-div-second">
+						<img  class="people-img" src="img/men2.png" width="62px" height="62px">
+						<p  class="people-p">John Doe <span class="ceo">ceo</span></p>
 					</div>
 				</div>
 				<div class="review1 review1-1">
@@ -87,22 +88,13 @@
 					<p class="reviews-p2">Symu.co</p>
 					<div class="arrow-div">
 					</div>
+					<div class="people-div">
+						<img  class="people-img" src="img/men1.png" width="62px" height="62px">
+						<p class="people-p">John Doe <span class="ceo">ceo</span></p>
+					</div>
 				</div>
 			</div>
-			<div class="people">
-				<div class="people-div">
-					<img  class="people-img" src="img/men1.png" width="62px" height="62px">
-					<p  class="people-p">John Doe <span class="ceo">ceo</span></p>
-				</div>
-				<div class="people-div">
-					<img  class="people-img" src="img/men2.png" width="62px" height="62px">
-					<p  class="people-p">John Doe <span class="ceo">ceo</span></p>
-				</div>
-				<div class="people-div">
-					<img  class="people-img" src="img/men1.png" width="62px" height="62px">
-					<p class="people-p">John Doe <span class="ceo">ceo</span></p>
-				</div>
-			</div>
+			
 		</div>
 	</section>
 	<section class="opportunities">
@@ -133,13 +125,13 @@
 		</div>
 	</section>
 	<section class="subscribe">
-		<div class="subscribe-div">
-			<h1 class="subscribe-h1">Subscribe to our newsletter<span class="dot">.</span></h1>
-			<p class="subscribe-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+		<div class="subscribe-div block">
+			<h1 class="subscribe-h1 responsive">Subscribe to our newsletter<span class="dot">.</span></h1>
+			<p class="subscribe-p responsive">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
 			<form class="subscribe-form" method="post" action="">
 				<div class="subscribe-block">
 					<input class="subscribe-input" type="" name="" placeholder="Your email adress">
-					<label>
+					<label class="label">
 						<button class="subscribe-button">Subscribe</button>
 					</label>
 				</div>
